<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- This file contains resource definitions for displayed strings, allowing
     them to be changed based on the locale and options. -->

<resources>
    <!-- Simple strings. -->
    <string name="back">Back</string>
    <string name="settings">Settings</string>

    <!-- This is a complex string containing style runs. -->
    <string name="mzp_app">MZP</string>
    <string name="Check_Status">Pool</string>
    <string name="Server_IP">Server IP</string>
    <string name="Server_MAC">Server MAC</string>
    <string name="Server_URL">Server URL</string>
    <string name="default_server_url">http://192.168.0.179:1234/cmd</string>
    <string name="default_server_ip">192.168.0.179</string>
    <string name="default_server_mac">00:1F:D0:9F:E5:B6</string>
    <string name="Server_IP_WOL">IP WOL</string>
    <string name="music">Music</string>
</resources>

