<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!--
     This file describes the layout of the main SkeletonApp activity
     user interface.
-->


    <TabHost xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <Spinner
                            android:id="@+id/spinnerServers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <TableLayout
                        android:id="@+id/tableLayout1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TableRow
                            android:id="@+id/tableRow1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:baselineAligned="false" >

                            <TextView
                                android:id="@+id/lbServerIP"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/Server_IP"
                                android:textSize="14dp" />

                            <EditText
                                android:id="@+id/txServerIP"
                                android:layout_width="225dp"
                                android:layout_height="wrap_content"
                                android:textSize="14dp" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/tableRow2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:baselineAligned="false" >

                            <TextView
                                android:id="@+id/TextView01"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/Server_MAC"
                                android:textSize="14dp" />

                            <EditText
                                android:id="@+id/txServerMAC"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14dp" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/tableRow3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:baselineAligned="false" >

                            <TextView
                                android:id="@+id/lbServerURL"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/Server_URL"
                                android:textSize="14dp" />

                            <EditText
                                android:id="@+id/txServerURL"
                                android:layout_width="200dp"
                                android:layout_height="wrap_content"
                                android:inputType="textUri"
                                android:textSize="14dp" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/tableRow4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                            <TextView
                                android:id="@+id/TextView02"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Server_IP_WOL"
                                android:textSize="14dp" />

                            <EditText
                                android:id="@+id/txServerWOL"
                                android:layout_width="225dp"
                                android:layout_height="wrap_content"
                                android:textSize="14dp" />
                        </TableRow>
                    </TableLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:baselineAligned="false"
                        android:gravity="left|right"
                        android:orientation="horizontal" >

                        <Button
                            android:id="@+id/btOK"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@android:string/ok" />

                        <Button
                            android:id="@+id/btAdd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Add" />

                        <Button
                            android:id="@+id/btRemove"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Remove" />

                        <Button
                            android:id="@+id/btBack"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/back" />

                        <Button
                            android:id="@+id/btNext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Next" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TableLayout
                        android:id="@+id/tableLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TableRow
                            android:id="@+id/tableRow6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Pool 3G" />

                            <EditText
                                android:id="@+id/txPoolInterval3G"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="number" >

                                <requestFocus />
                            </EditText>
                        </TableRow>

                        <TableRow
                            android:id="@+id/tableRow5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                            <TextView
                                android:id="@+id/textView1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Pool Wifi" />

                            <EditText
                                android:id="@+id/txPoolIntervalWifi"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="number" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/tableRow8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >
                        </TableRow>
                    </TableLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                </LinearLayout>
            </FrameLayout>

        </LinearLayout>
    </TabHost>

